# MidiControl

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat  config.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md
include/: AppVolumeManager.h  AudioDeviceManager.h  ConfigManager.h  MappingWindow.h  MediaController.h  MicrophoneManager.h  MidiController.h  OSDWindow.h  TrayManager.h  Utils.h
src/: AppVolumeManager.cpp  AudioDeviceManager.cpp  ConfigManager.cpp  MappingWindow.cpp  MediaController.cpp  MicrophoneManager.cpp  MidiController.cpp  OSDWindow.cpp  TrayManager.cpp  Utils.cpp  main.cpp
